--- a/wiki/AcolNet.wiki
+++ b/wiki/AcolNet.wiki
@@ -5,7 +5,7 @@ We have a scraper for this sort of site. The sites all look subtly different, so
   * Babergh
   * Basingstoke
   * Bassetlaw (no postcodes)
-  * BridgeNorth
+  * Bridgenorth
   * Bury
   * Cambridgeshire
   * Canterbury
