--- a/wiki/PlanningAuthoritiesB.wiki
+++ b/wiki/PlanningAuthoritiesB.wiki
@@ -35,7 +35,7 @@
 || Ready || Broads || Broads Authority || PublicAccess - using https || https://planning.broads-authority.gov.uk/PublicAccess/default.aspx ||
 || Ready || Bromley || Bromley || PublicAccess || ||
 || || *Bromsgrove* || Bromsgrove District Council || pdf of year to date || http://bromsgrove.whub.org.uk/home/bdcindex/bdc-planning/bdc-planning-applications/bdc-planning-recent-applications.htm ||
-|| Tom's scraper || Broxbourne || Broxbourne Borough Council || searchable by date || http://www.broxbourne.gov.uk/Internet/Applications/Planning%20Applications ||
+|| Done || Broxbourne || Broxbourne Borough Council || Tom's Scraper || http://www.broxbourne.gov.uk/Internet/Applications/Planning%20Applications ||
 || || *Broxtowe* || Broxtowe Borough Council || searchable html weekly lists || http://www.broxtowe.gov.uk/index/planning_new/planning_development_control_new/planning_development_control_planning_applications/planning_applications_disclaimer/planning_applications_search_for_planning_application.htm ||
 || Done || Buckinghamshire || Buckinghamshire County Council || PublicAccess || http://www.bucksplanning.gov.uk/publicaccess/ ||
 || || *Burnley* || Burnley Borough Council || weekly lists || http://www.burnley.gov.uk/site/scripts/planning.php ||
