--- a/wiki/PlanningAuthoritiesY.wiki
+++ b/wiki/PlanningAuthoritiesY.wiki
@@ -1,1 +1,1 @@
-|| || York City Council || York || searchable by date || http://www.ukplanning.com/york/search/index.htm ||
+|| Done || York City Council || York || searchable by date || http://www.ukplanning.com/york/search/index.htm ||
