--- a/wiki/PlanningAuthoritiesD.wiki
+++ b/wiki/PlanningAuthoritiesD.wiki
@@ -4,12 +4,12 @@
 || || Dartmoor || Dartmoor National Park Authority || weekly and monthly lists in html || http://www.dartmoor-npa.gov.uk/index/planning/pl-devcontrol/pl-searchapplicationregister/application_register.htm ||
 || || Daventry || Daventry District Council || searchable by date ||  http://www.daventrydc.gov.uk/swiftlg/apas/run/wphappcriteria.display ||
 || Done || Denbighshire || Denbighshire County Council|| ApplicationSearchServlet ||  http://planning.denbighshire.gov.uk/portal/servlets/ApplicationSearchServlet ||
-|| In Progress || Derby || Derby City Council || AcolNet ||  http://195.224.106.204/scripts/planningpages02/acolnetcgi.gov ||
+|| Done (no postcodes) || Derby || Derby City Council || AcolNet ||  http://195.224.106.204/scripts/planningpages02/acolnetcgi.gov ||
 || || Derbyshire || Derbyshire County Council || only responsible for a small amount. all apps online ||  http://www.derbyshire.gov.uk/environment/planning/planning_applications/current_applications/ ||
 || || Derbyshire Dales || Derbyshire Dales District Council || weekly lists in html. appalling looking search page || http://www.doctec.co.uk/derbyshiredales/aspxpages/WeeklyLists.aspx ||
 || || Derwentside || Derwentside District Council || searchable by date received || http://www.derwentside.gov.uk/index.cfm?articleid=8427 ||
 || || Devon || Devon County Council || monthly lists of councils own applications || http://www.devon.gov.uk/index/environment/planning/planning-system/planning_applications-mw/planning_applications.htm ||
-|| Done || Doncaster || Doncaster Metropolitan Borough Council || PublicAccess || http://maps.doncaster.gov.uk/publicaccess/tdc/tdc_home.aspx ||
+|| Done (no postcodes) || Doncaster || Doncaster Metropolitan Borough Council || PublicAccess || http://maps.doncaster.gov.uk/publicaccess/tdc/tdc_home.aspx ||
 || || Dorset || Dorset County Council || handles very few apps. Searchable by some dates. http://www.dorsetforyou.com/ePlanning/searchPageLoad.do ||
 || || Dover || Dover District Council || searchable by date received || http://www.dover.gov.uk/planning/Search_net/search.aspx ||
 || || Dudley || Dudley Metropolitan Borough Council || searchable by some dates, and weekly lists || http://www2.dudley.gov.uk/swiftlg/apas/run/Wphappcriteria.display ||
