Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesD.wiki
+++ b/wiki/PlanningAuthoritiesD.wiki
@@ -15,5 +15,5 @@
 || || Dudley || Dudley Metropolitan Borough Council || searchable by some dates, and weekly lists || http://www2.dudley.gov.uk/swiftlg/apas/run/Wphappcriteria.display ||
 || || Dumfries and Galloway || Dumfries and Galloway Council || weekly pdy lists separated into five areas || http://www.dumgal.gov.uk/dumgal/MiniWeb.aspx?id=91&menuid=1408&openid=1102 ||
 || Ready || Dundee || Dundee City Council || PublicAccess || ||
-|| In Progress || Durham || Durham City Council || Publicaccess - database appears to be empty || ||
+|| In Progress || Durham || Durham City Council || PublicAccess - database appears to be empty || ||
 || || Durham County || Durham County Council || Online register searchable by month and year || http://gis.durham.gov.uk/website/dcs/SearchMain.asp ||
