--- a/wiki/PlanningAuthoritiesH.wiki
+++ b/wiki/PlanningAuthoritiesH.wiki
@@ -5,7 +5,7 @@
 ||  || Hampshire County Council || Winchester || online in html, but no date search || http://www3.hants.gov.uk/planning/mineralsandwaste/planning-applications/applications.htm ||
 ||  || Harborough District Council || Leicester || searchable by date || http://www.harborough.gov.uk/planning/searchparam.asp ||
 || Done || Haringey Borough Council || Tottenham || ApplicationSearchServlet || http://www.planningservices.haringey.gov.uk/portal/servlets/ApplicationSearchServlet ||
-|| Ready || Harlow District Council || Harlow || AcolNet || http://planning.harlow.gov.uk/PlanningSearch/acolnetcgi.exe?ACTION=UNWRAP&RIPNAME=Root.PgeSearch ||
+|| Done || Harlow District Council || Harlow || AcolNet || http://planning.harlow.gov.uk/PlanningSearch/acolnetcgi.exe?ACTION=UNWRAP&RIPNAME=Root.PgeSearch ||
 ||  || Harrow || Harrow || suggests planningportal, or ukplanning || http://www.harrow.gov.uk/ccm/content/housing-and-planning/planning/planning-portal.en ||
 || Done || Harrogate Borough Council || Harrogate || PublicAccess || http://publicaccess.harrogate.gov.uk/publicaccess/tdc/tdc_home.aspx ||
 || Done || Hart District Council || Fleet || PublicAccess || http://publicaccess.hart.gov.uk/publicAccess/ ||
