Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesN.wiki
+++ b/wiki/PlanningAuthoritiesN.wiki
@@ -22,7 +22,7 @@
 || || North Somerset Council || Weston-super-Mare || weekly lists in html || http://212.158.113.30/WAM/search/pas/index.htm ||
 || Done || North Tyneside || Newcastle Upon Tyne || PublicAccess || http://publicaccess.northtyneside.gov.uk/PublicAccess/tdc/DcApplication/application_searchform.aspx ||
 || Done || North Warwickshire Borough Council || Atherstone || ApplicationSearchServlet|| http://planning.northwarks.gov.uk/portal/servlets/WeeklyListServlet ||
-|| Ready || North West Leicestershire District Council || Coalville || PublicAccess || http://paccess.nwleics.gov.uk/PublicAccess/tdc/DcApplication/application_searchform.aspx ||
+|| Done || North West Leicestershire District Council || Coalville || PublicAccess || http://paccess.nwleics.gov.uk/PublicAccess/tdc/DcApplication/application_searchform.aspx ||
 || Ready || North Wiltshire District Council || Chippenham || AcolNet || http://planning.northwilts.gov.uk/DCOnline/acolnetcgi.gov?ACTION=UNWRAP&RIPNAME=Root.pgesearch ||
 || || North York Moors National Park Authority || York || weekly lists in html || http://www.moors.uk.net/content.php?nID=55 ||
 || || North Yorkshire County Council || Northallerton || searchable by date || http://212.140.128.182/Online%20Register/PlanAppSrch.asp ||
