--- a/wiki/PlanningAuthoritiesN.wiki
+++ b/wiki/PlanningAuthoritiesN.wiki
@@ -28,7 +28,7 @@
 || || North Yorkshire County Council || Northallerton || searchable by date || http://212.140.128.182/Online%20Register/PlanAppSrch.asp ||
 || || Northampton Borough Council || Northampton || weekly lists in html - see also WNDC|| http://www.northamptonboroughcouncil.com/planning/defaultNBC.asp ||
 || || Northamptonshire County Council || Northampton || all apps in html or excel|| http://www.northamptonshire.gov.uk/Environment/DC/pln_apps.htm ||
-|| Ready || Northumberland County Council || Morpeth || PublicAccess || http://planning.northumberland.gov.uk/PublicAccess/tdc/DcApplication/application_searchform.aspx ||
+|| Done || Northumberland County Council || Morpeth || PublicAccess || http://planning.northumberland.gov.uk/PublicAccess/tdc/DcApplication/application_searchform.aspx ||
 || Done || Norwich City Council || Norwich || PublicAccess|| ||
 || || Nottingham City Council || Nottingham || weekly lists in html || http://www.nottinghamcity.gov.uk/planning/Report/weeksrch.htm ||
 || || Nottinghamshire County Council || Nottingham, West Bridgford || list of applications open for consultation || http://www.nottinghamshire.gov.uk/home/environment/planningmatters/developmentcontrol/planning-applications/open-applications.htm ||
