--- a/wiki/PlanningAuthoritiesV.wiki
+++ b/wiki/PlanningAuthoritiesV.wiki
@@ -1,3 +1,3 @@
 ||  || Vale of Glamorgan Council || Barry || one weekly list, and planning apps for whole year available as pdf || http://www.valeofglamorgan.gov.uk/living/planning/planning_applications/applications_register.aspx ||
 || Done  || Vale of White Horse District Council || Abingdon || PublicAccess || http://planning.whitehorsedc.gov.uk/publicaccess/mapping/map/map_detailview.aspx ||
-|| Ready || Vale Royal Borough Council || Winsford || PublicAccess || http://pa.valeroyal.gov.uk/publicaccess/default.aspx ||
+|| Done || Vale Royal Borough Council || Winsford || PublicAccess || http://pa.valeroyal.gov.uk/publicaccess/default.aspx ||
