--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -1,13 +1,15 @@
 = Scrapers being worked on =
 
-  * Bridgnorth (Duncan) - Acolnet. implemented, but returns error 400 when accessed by script
-  * Cambridgeshire (Duncan) - Acolnet. no advanced search page - will need some work
-  * Canterbury (Duncan) - Acolnet. results table is different from usual format
-  * Havant (Duncan) - acolnet - not sure why this doesn't work...
+  * Bridgnorth (Duncan) - AcolNet. implemented, but returns error 400 when accessed by script
+  * Cambridgeshire (Duncan) - AcolNet. no advanced search page - will need some work
+  * Canterbury (Duncan) - AcolNet. results table is different from usual format
+  * Havant (Duncan) - AcolNet - not sure why this doesn't work...
   * Isle of Man (Dan)
-  * Surrey Heath (Duncan) - acolnet - causes an error in my parser
+  * Oldham (Duncan) - AcolNet - causes an error in my parser
+  * Renfrewshire (Duncan) - AcolNet - causes an error in my parser
+  * Surrey Heath (Duncan) - AcolNet - causes an error in my parser
   * West Oxfordshire (Duncan) - not working yet
-  * Wychavon (Duncan) - an acolnet site, but slightly odd.
+  * Wychavon (Duncan) - an AcolNet site, but slightly odd.
 
 = Working and ready to deploy =
 
@@ -39,6 +41,7 @@
   * Perthshire
   * South Lakeland
   * Stratford
+  * Suffolk Coastal
   * Teignbridge (This never times out for me... must investigate what goes wrong on the server)
   * Watford
   * Welwyn Hatfield
@@ -47,6 +50,10 @@
 
 Other things to do:
   * Balby needs renaming to Blaby.
+  * Rename "District of Easington" to "Easington".
+  * Rename "London Borough off Ealing" to "London Borough of Ealing".
+  * Why does Hertsmere appear in the list of councils we've done twice?
+
 
 = Scrapes done, but sites/scrapers broken =
   * Bassetlaw (no postcodes)
@@ -56,4 +63,5 @@ Other things to do:
   * Doncaster (Duncan) - works in browser - empty results for script
   * Durham (Duncan) - works in browser - empty results for script
   * Hambleton (Duncan) - works for browser - empty results for script
+  * South Bedfordshire - timing out
   * Wolverhampton (empty database)
