Edited wiki page through web user interface.

--- a/wiki/ExistingScrapers.wiki
+++ b/wiki/ExistingScrapers.wiki
@@ -23,3 +23,16 @@ Others:
 Provided directly by the council:
 
   * Wansbeck
+
+Sites that look like East Hertfordshire:
+
+  * Daventry
+  * Dudley
+  * Gwynedd
+  * Lake District National Park
+  * Macclesfield
+  * Mole Valley
+  * Rochdale
+  * Snowdonia National Park
+  * St Edmundsbury
+
