--- a/wiki/PlanningAuthoritiesP.wiki
+++ b/wiki/PlanningAuthoritiesP.wiki
@@ -1,6 +1,6 @@
 || || Peak District National Park Authority || Bakewell || html results searchable by date || http://217.147.178.232/pam/search.jsp || 
 || || Pembrokeshire Coast National Park Authority || Haverfordwest || html results searchable by date  || http://www.pcnpa.org.uk/website/default.asp?SID=1097 ||
-|| || Pembrokeshire County Council || Haverfordwest || pdf weekly lists || http://www.pembrokeshire.gov.uk/content.asp?nav=109,140&parent_directory_id=646&id=5074 ||
+|| || Pembrokeshire County Council || Haverfordwest || searchable by date || http://planning.pembrokeshire.gov.uk/swiftlg/apas/run/wphappcriteria.display ||
 || || Pendle Borough Council || Nelson || interactive planning - searchable by date || http://bopdoccip.pendle.gov.uk/PlanApp/jsp/searchPlan.jsp ||
 || || Penwith District Council || Penzance || planning applications organised by year (in html) || http://www.penwith.gov.uk/index.cfm?articleid=7088 ||
 || Ready || Perth & Kinross Council || Perth || PublicAccess || http://193.63.61.22/publicaccess/ ||
