Edited wiki page through web user interface.

--- a/wiki/ExistingScrapers.wiki
+++ b/wiki/ExistingScrapers.wiki
@@ -38,3 +38,15 @@ Sites that look like East Hertfordshire:
   * Snowdonia National Park
   * St Edmundsbury
   * Dublin (though this might be a bit outside our remit :-))
+
+WAM:
+
+  * Barking and Dagenham
+  * Chichester
+  * Colchester
+  * East Lothian
+  * North Somerset
+  * Poole
+  * Rother
+  * South Gloucestershire
+  * Tower Hamlets
