Edited wiki page through web user interface.

--- a/wiki/PossibleGroups.wiki
+++ b/wiki/PossibleGroups.wiki
@@ -17,3 +17,10 @@ ePlanning (searchPageLoad.do):
   * Lincolnshire
   * Somerset
   * West Sussex
+
+PlanetApplicationEnquiry:
+
+  * Elmbridge
+  * North Lincolnshire
+  * Ryedale
+  * Worcester
