Edited wiki page through web user interface.

--- a/wiki/PossibleGroups.wiki
+++ b/wiki/PossibleGroups.wiki
@@ -18,9 +18,4 @@ ePlanning (searchPageLoad.do):
   * Somerset
   * West Sussex
 
-PlanetApplicationEnquiry:
-
-  * Elmbridge
-  * North Lincolnshire
-  * Ryedale
-  * Worcester
+PlanetApplicationEnquiry
