Edited wiki page through web user interface.

--- a/wiki/ExistingScrapers.wiki
+++ b/wiki/ExistingScrapers.wiki
@@ -53,3 +53,4 @@ Sites that look like Tower Hamlets (WAM)
   * Rother
   * South Gloucestershire
   * South Norfolk (appears to have PlanningExplorer as well)
+  * Westminster
