--- a/wiki/PlanningAuthoritiesS.wiki
+++ b/wiki/PlanningAuthoritiesS.wiki
@@ -5,7 +5,7 @@
 || Done || Scottish Borders Council || Ancrum, Duns, Galashiels, Hawick, Newtown St Boswells, Peebles || PublicAccess || http://eplanning.scotborders.gov.uk/publicaccess/ ||
 || || Sedgefield Borough Council || Spennymoor || searchable by date || http://www2.sedgefield.gov.uk/planning_search/index.php ||
 || || Sedgemoor District Counhcil || Bridgwater || planning online - searchable by date || http://www.sedgemoor.gov.uk/planning%20online/enl.aspx || 
-|| || Sefton Metropolitan Borough Council || Bootle, Southport || website is mostly dead today... || http://www.sefton.gov.uk/ ||
+|| || Sefton Metropolitan Borough Council || Bootle, Southport || searchable by date || http://www.sefton.gov.uk/Default.aspx?page=5297 ||
 || Done || Selby District Council || Selby || PublicAccess || http://publicaccess.selby.gov.uk/publicaccess/ ||
 || Done || Sevenoaks District Council || Sevenoaks || PublicAccess || http://publicaccess.sevenoaks.gov.uk/publicaccess/ ||
 || Done || Sheffield City Council || Sheffield || PublicAccess || http://planning.sheffield.gov.uk/publicaccess/default.aspx ||
@@ -64,3 +64,4 @@ http://wam.south-norfolk.gov.uk/WAM/search/pas/index.htm ||
 || || Swale Borough Council || Sittingbourne || ukplanning and weekly lists as pdf|| http://www.ukplanning.com/ukp/custom/forwards/selectandsearch.jsp?council=Swale%20Borough%20Council&fwd=search , http://www.swale.gov.uk/index.cfm?articleid=4368||
 || || Swansea City & County Council || Swansea || PlanningExplorer || http://www2.swansea.gov.uk/MVM/online/PL/GeneralSearch.aspx ||
 || Done || Swindon Borough Council || Swindon || PublicAccess || http://194.73.99.13/publicaccess/propdb/property/property_searchform.aspx ||
+ 
