--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -3,7 +3,6 @@
   * Bridgnorth (Duncan) - AcolNet. implemented, but returns error 400 when accessed by script
   * Cambridgeshire (Duncan) - AcolNet. no advanced search page - will need some work
   * Canterbury (Duncan) - AcolNet. results table is different from usual format
-  * Havant (Duncan) - AcolNet - not sure why this doesn't work...
   * Isle of Man (Dan)
   * Oldham (Duncan) - AcolNet - causes an error in my parser
   * Renfrewshire (Duncan) - AcolNet - causes an error in my parser
@@ -27,6 +26,7 @@
   * Fenland
   * Gateshead (not timing out today)
   * Gloucestershire (don't be fooled into thinking there are no applications: see eg 20/8/2007)
+  * Havant
   * Hinckley and Bosworth
   * London Borough of Sutton
   * Luton
@@ -64,3 +64,4 @@ Other things to do:
   * Hambleton (Duncan) - works for browser - empty results for script
   * South Bedfordshire - timing out
   * Wolverhampton (empty database)
+ 
